# bee

./: README.md
cf/: index.js  package-lock.json  package.json
docs/: index.html  script.js  style.css
functions/update_hints/: .gitignore  Dockerfile  build.sh  cloudbuild.yaml  create_requirements.sh  develop.sh  main.py  pyproject.toml  requirements.txt  response.txt
terraform/: appengine.tf  build.tf  main.tf  project.tf  scheduler.tf  secrets.tf  storage.tf
